Added German New App translation

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -304,10 +304,10 @@
     <string name="new_app">
         <![CDATA[
             Hey,<br><br>
-            just letting you know that a new app has been released recently:<br><br>
+            nur eine kleine Info zu einer neu veröffentlichten App:<br><br>
             <a href="%1$s">%2$s</a><br><br>
-            You can download it by pressing the title.<br><br>
-            Thanks
+            Du kannst sie durch Drücken auf den Namen herunterladen.<br><br>
+            Danke
         ]]>
     </string>
 
