adding some strings with month and weekday names

--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -12,7 +12,7 @@
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
     <string name="unknown">Unknown</string>
     <string name="always">Always</string>
-    <string name="never">Never</string>
+    <string name="never">Norse</string>
     <string name="details">Details</string>
     <string name="notes">Notes</string>
 
@@ -274,26 +274,26 @@
     <string name="wrong_root_selected_otg">Wrong folder selected, please select the root folder of your OTG device</string>
 
     <!-- Dates -->
-    <string name="january">January</string>
-    <string name="february">February</string>
-    <string name="march">March</string>
-    <string name="april">April</string>
-    <string name="may">May</string>
-    <string name="june">June</string>
-    <string name="july">July</string>
-    <string name="august">August</string>
-    <string name="september">September</string>
-    <string name="october">October</string>
-    <string name="november">November</string>
-    <string name="december">December</string>
+    <string name="january">Genver</string>
+    <string name="february">C\'hwevrer</string>
+    <string name="march">Meurzh</string>
+    <string name="april">Ebrel</string>
+    <string name="may">Mae</string>
+    <string name="june">Mezheven</string>
+    <string name="july">Gouere</string>
+    <string name="august">Eost</string>
+    <string name="september">Gwengolo</string>
+    <string name="october">Here</string>
+    <string name="november">Du</string>
+    <string name="december">Kerzu</string>
 
-    <string name="monday">Monday</string>
-    <string name="tuesday">Tuesday</string>
-    <string name="wednesday">Wednesday</string>
-    <string name="thursday">Thursday</string>
-    <string name="friday">Friday</string>
-    <string name="saturday">Saturday</string>
-    <string name="sunday">Sunday</string>
+    <string name="monday">Lun</string>
+    <string name="tuesday">Meurzh</string>
+    <string name="wednesday">Merc\'her</string>
+    <string name="thursday">Yaou</string>
+    <string name="friday">Gwener</string>
+    <string name="saturday">Sadorn</string>
+    <string name="sunday">Sul</string>
 
     <!-- About -->
     <string name="about">About</string>
