--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -273,6 +273,28 @@
     <string name="confirm_otg_storage_access_text">Vælg rodmappen på \'OTG\'-enheden på den næste skærm for at give adgang.</string>
     <string name="wrong_root_selected_otg">Den forkerte mappe er valgt, vælg rodmappen på din \'OTG\'-enhed</string>
 
+    <!-- Dates -->
+    <string name="january">Januar</string>
+    <string name="february">Februar</string>
+    <string name="march">Marts</string>
+    <string name="april">April</string>
+    <string name="may">Maj</string>
+    <string name="june">Juni</string>
+    <string name="july">Juli</string>
+    <string name="august">August</string>
+    <string name="september">September</string>
+    <string name="october">Oktober</string>
+    <string name="november">November</string>
+    <string name="december">December</string>
+
+    <string name="monday">Mandag</string>
+    <string name="tuesday">Tirsdag</string>
+    <string name="wednesday">Onsdag</string>
+    <string name="thursday">Torsdag</string>
+    <string name="friday">Fredag</string>
+    <string name="saturday">Lørdag</string>
+    <string name="sunday">Søndag</string>
+
     <!-- About -->
     <string name="about">Om</string>
     <string name="website_label">For at se kildekoden besøg</string>
