--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -273,24 +273,24 @@
     <string name="wrong_root_selected_otg">Carpeta incorrecta, seleccione la carpeta raíz de su dispositivo OTG</string>
 
     <!-- Dates -->
-    <string name="january">Enero</string>
-    <string name="february">Febrero</string>
+    <string name="january">Xaneiro</string>
+    <string name="february">Febreiro</string>
     <string name="march">Marzo</string>
     <string name="april">Abril</string>
-    <string name="may">Mayo</string>
-    <string name="june">Junio</string>
-    <string name="july">Julio</string>
+    <string name="may">Maio</string>
+    <string name="june">Xuño</string>
+    <string name="july">Xullo</string>
     <string name="august">Agosto</string>
-    <string name="september">Septiembre</string>
-    <string name="october">Octubre</string>
-    <string name="november">Noviembre</string>
-    <string name="december">Diciembre</string>
+    <string name="september">Setembro</string>
+    <string name="october">Outubro</string>
+    <string name="november">Novembro</string>
+    <string name="december">Nadal</string>
 
-    <string name="monday">Lunes</string>
-    <string name="tuesday">Martes</string>
-    <string name="wednesday">Miércoles</string>
-    <string name="thursday">Jueves</string>
-    <string name="friday">Viernes</string>
+    <string name="monday">Segunda</string>
+    <string name="tuesday">Terceira</string>
+    <string name="wednesday">Cuarta</string>
+    <string name="thursday">Quinta</string>
+    <string name="friday">Sexta</string>
     <string name="saturday">Sábado</string>
     <string name="sunday">Domingo</string>
 
